Readme: add build instructions

--- a/README.adoc
+++ b/README.adoc
@@ -41,7 +41,14 @@ Openshift-Metrics users must provide an authentication token.
 
 == Building
 
-You need `npm` and `grunt` to build the project.
+You need `npm` and `grunt` to build the project. Clone this repository, then from that directory run:
+[source,bash]
+----
+npm install
+grunt
+----
+
+Files are generated under the `dist` directory.
 
 == Building and running a Docker image
 
